<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopping</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="rate">Rate the App</string>
    <string name="buy_products">Buy Products</string>
    <string name="name">Name</string>
    <string name="title_activity_rate_site">RateSite</string>
    <string name="kindly_rate">Kindly, Rate our App</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="title_activity_buy_products">Buy Products</string>
    <string name="available_products">Available Products</string>
    <string name="minimum">Minimum</string>
    <string name="apple">Apple</string>
    <string name="lava">Lava</string>
    <string name="i1000">1000</string>
    <string name="i4000">4000</string>
    <string name="i10000">10000</string>
    <string name="oay">Pay</string>
    <string name="total">Total :</string>

</resources>
